@@ -34,6 +34,12 @@ if test x"$enable_trayicon_plugin" != xno; then
        PKG_CHECK_MODULES(GMODULE, glib-2.0 gmodule-2.0)
 fi
 
+AC_ARG_ENABLE(update-mime-database,
+        AC_HELP_STRING([--disable-update-mime-database],
+	[do not run the update-mime-database utility (mostly useful for package maintainers) ]))
+AM_CONDITIONAL(UPDATE_MIME_DATABASE, test "$enable_update_mime_database" != "no")
+
+
 dnl
 dnl debugging output
 dnl
@@ -56,4 +62,5 @@ AC_OUTPUT([
 	script/Makefile
 	src/Makefile
 	man/Makefile
+	data/Makefile
 ])
